Support for path names with spaces in Unix environments